# hannou

./: .gitignore  README  manage.py  pyproject.toml  uwsgi.ini
backend/: apps.py  asgi.py
backend/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.template.html  App.ts  App.vue  components.css  components.ts  style.css  types.ts  utils.ts
frontend/src/services/: api.ts
hannou/: deploy.py  models.py  settings.py  urls.py  views.py  wsgi.py
hannou-frontend/: vite.config.ts
hannou-frontend/src/: App.vue  style.css
static/: script.js
static/.vite/: manifest.json
static/assets/: main-BH_L_D81.css  main-YnSggbwR.js  main-wEO4lGbF.js
templates/: index.html
