[tool.poetry]
name = "hannou"
version = "0.1.0"
description = "I guess this is my own booru"
authors = ["Keir Little <me@keirlittle.com>"]
license = "MIT"
readme = "README"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
